--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "expo-image-picker": "^10.1.4",
     "formik": "^2.2.6",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^1.5.2",
