--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.12",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -21,6 +22,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -30,6 +32,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.3",
+    "sweetalert2": "^10.16.7",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
