--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.4",
-    "nodemon": "^2.0.7"
+    "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "sharp": "^0.28.2"
   }
 }
