--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-validator": "^6.11.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.4",
