--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,11 @@
     "express-validator": "^6.11.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.4",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "razorpay": "^2.0.6",
