--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "react-toastify": "^7.0.3",
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
+    "save": "^2.4.0",
     "styled-components": "^5.2.3",
     "sweetalert2": "^10.16.7",
     "web-vitals": "^1.1.1",
+    "webpack": "^4.44.2",
     "yup": "^0.32.9"
   },
   "scripts": {
